Chef Luca section mobile graphic bug solved

--- a/resources/sass/pages/home/_chef.scss
+++ b/resources/sass/pages/home/_chef.scss
@@ -66,11 +66,12 @@
     
             #chef-section-image-container {
                 width: 100%;
-                max-width: 320px;
                 align-items: end;
-    
+                
                 #chef-section-image {
                     width: 100%;
+                    padding: 24px 0px;
+                    max-width: 248px;
                 }
             }
     
@@ -85,17 +86,19 @@
                     font-size: 28px;
                     margin-bottom: 8px;
                     margin-left: auto;
+                    margin-right: auto;
                 }
                 
                 #chef-section-text-subtitle {
                     font-size: 24px;
                     margin-bottom: 8px;
                     margin-left: auto;
+                    margin-right: auto;
                 }
                 
                 
                 #chef-section-text-content {
-                    font-size: 20px;
+                    font-size: 16px;
                 }
             }
         }
